name:                yaya-containers
version:             0.1.0.0
synopsis:            Pattern functors and instances for types in the containers
                     package.
homepage:            https://github.com/sellout/yaya#readme
author:              Greg Pfeil
maintainer:          greg@technomadic.org
copyright:           2024 Greg Pfeil
license:             AGPL-3
license-file:        LICENSE
category:            Recursion
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.1
                   , GHC == 8.8.1, GHC == 8.8.4
                   , GHC == 8.10.1
                   , GHC == 9.0.1
                   , GHC == 9.2.1
                   , GHC == 9.4.1, GHC == 9.4.8
                   , GHC == 9.6.1
                   , GHC == 9.8.1

library
  hs-source-dirs:      src
  exposed-modules:     Yaya.Containers.Pattern.IntMap
                     , Yaya.Containers.Pattern.IntSet
                     , Yaya.Containers.Pattern.Map
                     , Yaya.Containers.Pattern.Set
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , yaya >= 0.5.0
  default-extensions:  ConstraintKinds
                     , DeriveGeneric
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , LambdaCase
                     , MultiParamTypeClasses
                     , PackageImports
                     , RankNTypes
                     , ScopedTypeVariables
                     , StrictData
                     , NoImplicitPrelude
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sellout/yaya
