name:                yaya-hedgehog
version:             0.1.2.1
synopsis:            Hedgehog testing support for the Yaya recursion scheme
                     library.
description:         If you use Yaya in your own code and have tests written
                     using Hedgehog, then this library will help you with
                     generating trees, verifying type class instances, etc.
homepage:            https://github.com/sellout/yaya#readme
author:              Greg Pfeil
maintainer:          greg@technomadic.org
copyright:           2017 Greg Pfeil
license:             AGPL-3
license-file:        LICENSE
category:            Recursion
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yaya.Hedgehog.Expr
                     , Yaya.Hedgehog.Fold
  build-depends:       base >= 4.7 && < 5
                     , deriving-compat
                     , hedgehog
                     , yaya >= 0.1.0
  default-extensions:  ConstraintKinds
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , LambdaCase
                     , MultiParamTypeClasses
                     , RankNTypes
                     , ScopedTypeVariables
                     , TupleSections
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sellout/yaya
